--- a/NumPy/Numpy.ipynb
+++ b/NumPy/Numpy.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "417bd40e",
    "metadata": {},
    "outputs": [
@@ -988,19 +988,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "1c30d4c4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_4840/1395609392.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1032,13 +1033,439 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6a07d355",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4 10 10 10 10 10]\n",
+      "[10 10 10 10 10  4  3  2  1  0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#we can also combine assignment and slicing:\n",
+    "\n",
+    "a = np.arange(10)\n",
+    "\n",
+    "a[5:] = 10\n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "print(a[::-1]) #reversing the array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e7dbbb30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 4 3 2 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.arange(5)\n",
+    "\n",
+    "a[5:] = b[::-1] #start #length #reverse(-1)  \n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c687bc50",
+   "metadata": {},
+   "source": [
+    "## 4. Copies and Views"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf99032c",
+   "metadata": {},
+   "source": [
+    "A slicing operation creates a view on the original array, which is just a way of accessing array data. Thus the original array is not copied in memory . You can use np.may_share_memory() to check if two arrays share the same memory block."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9edf104c",
+   "metadata": {},
+   "source": [
+    "#### when modifying the view, the original array is modified as well:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1a513674",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(11)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a4608a97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  2,  4,  6,  8, 10])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = a[::2]\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8fd17082",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shares_memory(a,b) #this is view not copying"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "21cf2c7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10,  2,  4,  6,  8, 10])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[0] = 10\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "847e5e3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdcc7206",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#we can also combine"
+    "#eventhough we modified b, it updated 'a' cauz both share same memory location"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c224656c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2, 4, 6, 8])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(10)\n",
+    "\n",
+    "c = a[::2].copy() #force a copy\n",
+    "\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "844b70f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shares_memory(a,c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "bd312406",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c [0] = 10\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b3a0255",
+   "metadata": {},
+   "source": [
+    "# 5. Fancy Indexing \n",
+    "\n",
+    "NumPy arrays can be indexed with slices, but also with boolean or integers arrays(masks).\n",
+    "This method is called fancy indexing. It creates copies not views."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "776ec099",
+   "metadata": {},
+   "source": [
+    "#### using Boolean Mak"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "fdf67048",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([14, 13, 16, 16, 18, 10,  9,  2, 19, 13,  8, 14,  8, 18,  5])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.random.randint(0,20,15) #num>= 0 and num <20 i.e. range is (20) and 15 is the number of elements\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "79aaf3e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = (a%2==0) #returns the even num\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "98dc1243",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14 16 16 18 10  2  8 14  8 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "extract_even = a[mask]\n",
+    "\n",
+    "print(extract_even)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7a86e9f",
+   "metadata": {},
+   "source": [
+    "#### Indexing with a mask can be very useful to assign a new value to a sub-array:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "861104a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1 13 -1 -1 -1 -1  9 -1 19 13 -1 -1 -1 -1  5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a[mask] = -1 #puts -1 to all even numbers\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "604e00b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0, 10, 20, 30, 40, 50, 60, 70, 80, 90])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(0,100,10)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "0f0feab7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20, 30, 20, 40, 20])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "indexing can be done with an array of integers, where the same index is \n",
+    "repeated\n",
+    "\"\"\"\n",
+    "a[[2,3,2,4,2]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "73675067",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,  10,  20,  30,  40,  50,  60, -69,  80, -69])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#New values can be assigned\n",
+    "a[[9,7]] = -69\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28756f46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
